--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -27,4 +27,15 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go }}
-      - run: go test ./...
+      - run: go test . transport/...
+      
+  inttest: 
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+      - run: | 
+         cd inttest
+         make inttest
