--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -33,9 +33,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/setup-go@v3
         with:
           go-version: 1.19
-      - run: | 
+      - name: inttests
+        run: | 
          cd inttest
          make inttest
