--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.19
-      - name: inttests
+      - name: Run containered integration tests
         run: | 
          cd inttest
          make inttest
