--- a/inttest/Makefile
+++ b/inttest/Makefile
@@ -5,4 +5,7 @@ all: inttest
 inttest: inttest-csrx
 
 inttest-csrx:
-	docker-compose -f docker-compose.csrx.yml up --remove-orphans --exit-code-from inttest
+	docker-compose -f docker-compose.csrx.yml up \
+		--remove-orphans \
+		--abort-on-container-exit \
+		--exit-code-from inttest
