--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -41,6 +41,7 @@ jobs:
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
+          username: $
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/setup-go@v3
