--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -42,7 +42,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCRIO_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/setup-go@v3
         with:
