inttest: make dut more robust
I ran into some issues where the DUT wasn't coming up in a reasonable
amount of time and essentially a race condition between the integration
tests themselves and the DUT being ready for them.

This adds a quick (ha!) shell script for making sure we are seeing
hello's from the DUT before running the integration tests.

--- a/Dockerfile.inttest
+++ b/Dockerfile.inttest
@@ -1,7 +1,12 @@
 FROM docker.io/library/golang:1.19-alpine
 
+# required for wait-for-hello.sh script
+RUN apk add \
+    openssh \
+    sshpass \
+    perl-xml-xpath 
+
 COPY . /src
 
 WORKDIR /src/inttest
-
-ENTRYPOINT CGO_ENABLED=0 go test -v .
+CMD CGO_ENABLED=0 go test -v .
