--- a/inttest/Makefile
+++ b/inttest/Makefile
@@ -1,11 +1,12 @@
 .PHONY: all inttest inttest-csrx
 
-all: inttest 
+.DEFAULT: inttest 
 
 inttest: inttest-csrx
 
 inttest-csrx:
 	docker-compose -f docker-compose.csrx.yml up \
+		--build \
 		--remove-orphans \
 		--abort-on-container-exit \
 		--exit-code-from inttest
