--- a/inttest/docker-compose.csrx.yml
+++ b/inttest/docker-compose.csrx.yml
@@ -5,18 +5,25 @@ services:
       context: ..
       dockerfile: Dockerfile.inttest
     environment:
-      - NETCONF_DUT_SSHADDR=dut:22
-      - NETCONF_DUT_SSHUSER=root
-      - NETCONF_DUT_SSHPASS=juniper123
+      NETCONF_DUT_SSHHOST: csrx
+      NETCONF_DUT_SSHPORT: 22
+      NETCONF_DUT_SSHADDR: csrx:22
+      NETCONF_DUT_SSHUSER: root
+      NETCONF_DUT_SSHPASS: juniper123
+      NETCONF_DUT_FLAVOR: junos
     depends_on:
-      dut:
-        condition: service_healthy
-  dut:
-    image: ghcr.io/nemith/netconf_dut_juniper_csrx:20.3R1.8
+      - csrx
+    command: >
+      sh -c "./wait-for-hello.sh
+      -s $$NETCONF_DUT_SSHPASS
+      -p $$NETCONF_DUT_SSHPORT
+      $$NETCONF_DUT_SSHUSER@$$NETCONF_DUT_SSHHOST &&
+      CGO_ENABLED=0 go test -v ."
+  csrx:
+    image: ${CSRX_IMAGE:-ghcr.io/nemith/netconf_dut_juniper_csrx:20.3R1.8}
+    environment:
+      - CSRX_JUNOS_CONFIG=/root/initial.conf
     privileged: true
-    healthcheck:
-      test: nc -z localhost 22
-      interval: 10s
-      retries: 5
-      timeout: 5s
     stop_signal: SIGTERM
+    volumes:
+      - ./csrx.conf:/root/initial.conf:ro
