inttest: cleanup image selection.
The private image on ghcr.io should really only be used for ci and
instead local testing should default the to the image name provided by
the vendor on import.

Documentation on how to do this will come in the future.

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -49,6 +49,9 @@ jobs:
           go-version: 1.19
 
       - name: Run containered integration tests
+        env:
+          # Private images for testing
+          CSRX_IMAGE: ghcr.io/nemith/netconf_dut_juniper_csrx:20.3R1.8
         run: | 
          cd inttest
          make inttest
