--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -16,31 +16,37 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.19
+          cache: true
 
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+      - run: make lint
 
   test:
     name: Unit Tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go: [ '1.17', '1.18', '1.19' ]
+        go: 
+          - '1.17' 
+          - '1.18'
+          - '1.19'
     steps:
       - uses: actions/checkout@v3
 
       - uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go }}
+          cache: true
 
-      - run: go test . transport/...
+      - run: make test
       
   inttest: 
     name: Integration Tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [ 'ceos', 'csrx' ]
+        target: 
+          - ceos
+          - csrx 
     steps:
       - uses: actions/checkout@v3
 
