add confd to inttest matrix

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -40,7 +40,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [ 'ceos', 'csrx' ]
+        target:
+          - ceos
+          - csrx
+          - confd
     steps:
       - uses: actions/checkout@v3
 
