--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -58,6 +58,7 @@ jobs:
           # Private images for testing
           CSRX_IMAGE: ghcr.io/nemith/netconf_dut_juniper_csrx:20.3R1.8
           CEOS_IMAGE: ghcr.io/nemith/netconf_dut_arista_ceos64-lab:4.28.3M
+          CONFD_IMAGE: ghcr.io/nemith/netconf_dut_tailf_confd:7.8.3
         run: | 
          cd inttest
          make ${{ matrix.target }}
