inttest: add netopeer2

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -44,6 +44,7 @@ jobs:
           - ceos
           - csrx
           - confd
+          - netopeer2
     steps:
       - uses: actions/checkout@v3
 
