--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           go-version: 1.19
 
-      - run: go test -coverprofile=cover.out . transport/...
+      - run: go test -coverprofile=cover.out $(go list ./... github.com/nemith/netconf/inttest)
 
       - name: checkout covrage branch
         uses: actions/checkout@v3
