--- a/inttest/docker-compose.ceos.yml
+++ b/inttest/docker-compose.ceos.yml
@@ -8,7 +8,7 @@ services:
       NETCONF_DUT_SSHHOST: ceos
       NETCONF_DUT_SSHPORT: 830
       NETCONF_DUT_SSHUSER: admin
-      NETCONF_DUT_SSHPASS: admin 
+      NETCONF_DUT_SSHPASS: admin
       NETCONF_DUT_FLAVOR: eos
     depends_on:
       - ceos
@@ -17,7 +17,7 @@ services:
       -s $$NETCONF_DUT_SSHPASS
       -p $$NETCONF_DUT_SSHPORT
       $$NETCONF_DUT_SSHUSER@$$NETCONF_DUT_SSHHOST &&
-      CGO_ENABLED=0 go test -v ."
+      CGO_ENABLED=0 go test -tags=inttest -v ."
   ceos:
     image: ${CEOS_IMAGE:?}
     environment:
