--- a/inttest/docker-compose.netopeer2.yml
+++ b/inttest/docker-compose.netopeer2.yml
@@ -8,7 +8,7 @@ services:
       NETCONF_DUT_SSHHOST: netopeer2
       NETCONF_DUT_SSHPORT: 830
       NETCONF_DUT_SSHUSER: netconf
-      NETCONF_DUT_SSHPASS: netconf 
+      NETCONF_DUT_SSHPASS: netconf
       NETCONF_DUT_FLAVOR: netopeer2
     depends_on:
       - netopeer2
@@ -17,7 +17,7 @@ services:
       -s $$NETCONF_DUT_SSHPASS
       -p $$NETCONF_DUT_SSHPORT
       $$NETCONF_DUT_SSHUSER@$$NETCONF_DUT_SSHHOST &&
-      CGO_ENABLED=0 go test -v ."
+      CGO_ENABLED=0 go test -tags=inttest -v ."
   netopeer2:
     build:
       context: .
