--- a/inttest/docker-compose.csrx.yml
+++ b/inttest/docker-compose.csrx.yml
@@ -20,6 +20,7 @@ services:
       CGO_ENABLED=0 go test -tags=inttest -v ."
   csrx:
     image: ${CSRX_IMAGE:?}
+    platform: "linux/amd64"
     environment:
       - CSRX_JUNOS_CONFIG=/root/initial.conf
     privileged: true
