--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -23,11 +23,7 @@ jobs:
         go: [ '1.17', '1.18', '1.19', '1.20']
     steps:
       - uses: actions/checkout@v3
-
-      - uses: actions/setup-go@v3
-        with:
-          go-version: ${{ matrix.go }}
-
+      - uses: extractions/setup-just@v1
       - run: GO_VERSION=${{ matrix.go }} just test
 
   inttest:
