meta: (ab)use docker build for lint/test/inttest pipelines

--- a/inttest/docker-compose.confd.yml
+++ b/inttest/docker-compose.confd.yml
@@ -3,7 +3,8 @@ services:
   inttest:
     build:
       context: ..
-      dockerfile: Dockerfile.inttest
+      dockerfile: Dockerfile
+      target: inttest
     environment:
       NETCONF_DUT_SSHHOST: confd
       NETCONF_DUT_SSHPORT: 2022
@@ -17,7 +18,7 @@ services:
       -s $$NETCONF_DUT_SSHPASS
       -p $$NETCONF_DUT_SSHPORT
       $$NETCONF_DUT_SSHUSER@$$NETCONF_DUT_SSHHOST &&
-      CGO_ENABLED=0 go test -tags=inttest -v ."
+      ./inttest.test -test.v"
   confd:
     image: ${CONFD_IMAGE:?}
     platform: "linux/amd64"
