properly encode rpc request messages (RPCMsg)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["netconf"]
+  "cSpell.words": [
+    "byteslice",
+    "innerxml",
+    "inttest",
+    "Junos",
+    "nemith",
+    "netconf"
+  ]
 }
