--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -13,11 +13,11 @@ jobs:
       - name: checkout main branch
         uses: actions/checkout@v4
 
-      - uses: actions/setup-go@v4
+      - uses: actions/setup-go@v5
         with:
-          go-version: 1.22
+          go-version: '1.25'
 
-      - run: go test -coverprofile=cover.out ./...
+      - run: go test -v -race -coverprofile=cover.out ./...
 
       - name: checkout covrage branch
         uses: actions/checkout@v4
