--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -12,19 +12,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: extractions/setup-just@v2
-      - run: just lint
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.25'
+      - uses: golangci/golangci-lint-action@v7
+        with:
+          version: v2.6.1
 
   test:
     name: Unit Tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go: ["1.21", "1.22"]
+        go: ["1.24", "1.25"]
     steps:
       - uses: actions/checkout@v4
-      - uses: extractions/setup-just@v2
-      - run: GO_VERSION=${{ matrix.go }} just test
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+      - run: go test -race ./...
 
   inttest:
     name: Integration Tests
